SCR #420378 - fix: scrollbar size

--- a/src/engine-scss/mixins/_base.mixins.scss
+++ b/src/engine-scss/mixins/_base.mixins.scss
@@ -194,7 +194,6 @@
         &-thumb {
             background: ef.get-value($map, 'scrollbarThumbBg');
             border-radius: ef.get-value($config, 'borderRadius');
-            border: ef.get-value($map, 'scrollbarBorder');
         }
     }
 }
